--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a href="link" class="photo1"><img src="linkedin.png" alt="" height="5px" width="5px"></a>
     
         </div>
-            <h6 class="credits">Designed By <br> <span> <a href="https://shalini-k-m.github.io/kmshalini.github.io" style="text-decoration: none;"/>Shalini K M</a></span></h6>
+            <h6 class="credits">Designed By <br> <span> <a href="https://shalini-k-m.github.io/kmshalini.github.io" style="text-decoration: none; color: rgb(245,51,51)"/>Shalini K M</a></span></h6>
         </div>
     </div>
 </body>
